syntax="proto3";

import "google/protobuf/timestamp.proto";

package idl;
option go_package="./pb/trainingSummary;trainingSummary";

message TrainingSummaryModel{
  //@inject_tag: json:"training_id"
  uint32 TrainingId=1;
  //@inject_tag: json:"training_name"
  string TrainingName=2;
  //@inject_tag: json:"train_date"
  google.protobuf.Timestamp TrainDate=3;
  //@inject_tag: json:"event_gender"
  string EventGender=4;
  //@inject_tag: json:"event_people_type"
  string EventPeopleType=5;
  //@inject_tag: json:"event_scale"
  string EventScale=6;
  //@inject_tag: json:"event"
  string Event=7;
  //@inject_tag: json:"weather"
  string Weather=8;
  //@inject_tag: json:"temp"
  int32 Temp=9;
  //@inject_tag: json:"wind_dir"
  string WindDir=10;
  //@inject_tag: json:"loc"
  string Loc=11;
  //@inject_tag: json:"coach"
  string Coach=12;
  //@inject_tag: json:"sample_count"
  int32 SampleCount=13;
  //@inject_tag: json:"remark"
  string Remark=14;
}