syntax = "proto3";
import "idl/trainingSummaryModel.proto";
import "google/protobuf/timestamp.proto";

package idl;
option go_package="./pb/trainingSummary;trainingSummary";

//用于添加trainingSummary
message trainingSummaryAddRequest{
  //@inject_tag: json:"training_name"
  string TrainingName=1;
  //@inject_tag: json:"train_date"
  google.protobuf.Timestamp TrainDate=2;
  //@inject_tag: json:"event_gender"
  string EventGender=3;
  //@inject_tag: json:"event_people_type"
  string EventPeopleType=4;
  //@inject_tag: json:"event_scale"
  string EventScale=5;
  //@inject_tag: json:"event"
  string Event=6;
  //@inject_tag: json:"weather"
  string Weather=7;
  //@inject_tag: json:"temp"
  int32 Temp=8;
  //@inject_tag: json:"wind_dir"
  string WindDir=9;
  //@inject_tag: json:"loc"
  string Loc=10;
  //@inject_tag: json:"coach"
  string Coach=11;
  //@inject_tag: json:"sample_count"
  int32 SampleCount=12;
  //@inject_tag: json:"remark"
  string Remark=13;
}

message trainingSummaryGetByTrainingNameRequest{
  //@inject_tag: json:"training_name"
  string TrainingName=1;
}

message trainingSummaryGetByTrainDateRequest{
  //@inject_tag: json:"train_date"
  google.protobuf.Timestamp TrainDate=1;
}

message trainingSummaryGetByEventRequest{
  //@inject_tag: json:"event"
  string Event=1;
}

message trainingSummaryResponse{
  //@inject_tag: json:"training_summary"
  TrainingSummaryModel trainingSummaryDetail=1;
  //@inject_tag: json:"code"
  uint32 Code=2;
}

message trainingSummaryCommonResponse{
  //@inject_tag: json:"code"
  uint32  Code = 1;
  //@inject_tag: json:"msg"
  string  Msg = 2;
  //@inject_tag: json:"data"
  string Data = 3;
}


//查询先写三个 根据训练的名称查询 训练的时间查询 训练的项目查询
service TrainingSummaryService{
  rpc TrainingSummaryAdd(trainingSummaryAddRequest) returns(trainingSummaryCommonResponse);
  rpc TrainingSummaryGetByTrainingName(trainingSummaryGetByTrainingNameRequest) returns(trainingSummaryResponse);
  rpc TrainingSummaryGetByTrainDate(trainingSummaryGetByTrainDateRequest) returns(trainingSummaryResponse);
  rpc TrainingSummaryGetByEvent(trainingSummaryGetByEventRequest) returns(trainingSummaryResponse);
}